<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.devotio.ui.auth.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.devotio.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.devotio.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_temple_detail"
            app:destination="@id/templeDetailFragment" />
        <action
            android:id="@+id/action_dashboard_to_map"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.devotio.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.devotio.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/templeDetailFragment"
        android:name="com.example.devotio.ui.dashboard.TempleDetailFragment"
        android:label="TempleDetailFragment"
        tools:layout="@layout/fragment_temple_detail">
        <argument
            android:name="templeId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.devotio.ui.dashboard.MapFragment"
        android:label="MapFragment"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/prayersFragment"
        android:name="com.example.devotio.ui.prayers.PrayersFragment"
        android:label="PrayersFragment"
        tools:layout="@layout/fragment_prayers">
        <action
            android:id="@+id/action_prayers_to_category"
            app:destination="@id/prayerCategoryFragment">
            <argument
                android:name="categoryId"
                app:argType="integer" />
        </action>
        <action
            android:id="@+id/action_prayersFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/prayerCategoryFragment"
        android:name="com.example.devotio.ui.prayers.PrayerCategoryFragment"
        android:label="PrayerCategoryFragment"
        tools:layout="@layout/fragment_prayer_category">
        <argument
            android:name="categoryId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.devotio.ui.player.PlayerFragment"
        android:label="@string/now_playing" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.devotio.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.devotio.ui.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/audioEffectsFragment"
        android:name="com.example.devotio.ui.player.AudioEffectsFragment"
        android:label="@string/audio_effects">
        <action
            android:id="@+id/action_audioEffectsFragment_pop"
            app:popUpTo="@id/audioEffectsFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation> 